--- a/README
+++ b/README
@@ -10,5 +10,25 @@ A simple Express.js API that returns profile info and a random cat fact.
 
 ### 1. Clone the repo
 ```bash
-git clone https://github.com/<your-username>/backend-wizard.git
-cd backend-wizard
+git clone https://github.com/amiabl-programr/hng13-stage0-dynamic-profile-endpoint-project
+cd hng13-stage0-dynamic-profile-endpoint-project
+```
+### 2. Install all packages
+```bash
+npm install
+```
+### 3. Start the server
+From the root of the project, you can run this command below:
+```bash
+node src/server.js
+```
+### 4. Test the server
+You can test on the terminal using the command:
+```bash
+curl localhost:3000/me
+```
+
+Or on the browser
+```bash
+localhost:3000/me
+```
